--- a/packages/blog-starter-kit/themes/jonohash/styles/index.css
+++ b/packages/blog-starter-kit/themes/jonohash/styles/index.css
@@ -4,6 +4,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-padding-top: 6rem;
+}
+
+@media screen and (max-width: 640px) {
+    html {
+        scroll-padding-top: 8rem;
+    }
+}
+
 body {
     font-family: Nunito;
 }
