--- a/packages/blog-starter-kit/themes/jonohash/styles/index.css
+++ b/packages/blog-starter-kit/themes/jonohash/styles/index.css
@@ -14,6 +14,17 @@ html {
     }
 }
 
+code::before, code::after {
+    content: '' !important;
+}
+
+code {
+    background: #ddd;
+    color: #999;
+    border-radius: 5px;
+    padding: 5px;
+}
+
 body {
     font-family: Nunito;
 }
